# sp-crates

./: CLAUDE.md  Cargo.toml  GoGraph-Description-15.pages
cache/: Cargo.toml
cache/event_stats/: Cargo.toml
cache/event_stats/src/: lib.rs
cache/src/: lib.rs
cache/src/service/: lru.rs  mod.rs  persist.rs
oracle_metadata/: 01_create_tables.sql  02_create_sequences.sql  10_extract_packages.sql  11_extract_procedures.sql  12_extract_functions.sql  13_extract_triggers.sql  14_extract_tables.sql  15_extract_views.sql  16_extract_synonyms.sql  17_extract_sequences.sql  18_extract_indexes.sql  19_extract_constraints.sql  20_identify_business_rules.sql  30_export_business_rules.sql  40_exp_ddl_extract.sh  99_run_all.sql
src/: Cargo.toml  main.rs  node.rs  rkey.rs
